[tool.poetry]
name = "dlcounter"
version = "0.9.0"
description = "Download counter for NGINX"
authors = ["SteveDaulton <stevedaulton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
flake8 = "^4.0.1"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
